@@ -29,4 +29,8 @@
 25-Jul-2019  - V0.33 Try to improve retention of ordering for json load
  9-Aug-2019  - V0.34 Added retry for all url or service requests
 10-Aug-2019  - V0.35 Incorporate ElementTree parser for XML deserializer
-#
+11-Aug-2019  - V0.36 Migrate compress/uncompreess and toAscii methods
+                     from IoUtil to FileUtil. In FileUtil, add __extractZipMember() method.
+                     Add retry support for __fetchUrlx(). Replace urlibx version of __fetchUrlx
+                     with a version that depends on  requests module to better support
+                     redirection and authentication.  Add further unit tests for FileUtil.
